--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <td>1hari</td>
       <td><a href="https://wa.me/+62821-2132-5606>text=hai bang" target="_blank">wa.me</a></td>
         </table>
-      
+      <a href="https://whatsapp.com/channel/0029Vb6E9Fc3QxRy0nu79R3x"> jangan lupa join saluran gw 
       
   </body>
 </html>
