--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
           <td>Rp15.00</td>
           <td>1hari</td>
       <td><a href="https://wa.me/+62821-2132-5606>text=hai bang" target="_blank">wa.me</a></td>
-        </table>
-      <a href="https://whatsapp.com/channel/0029Vb6E9Fc3QxRy0nu79R3x"> jangan lupa join saluran gw 
+        </table><br>
+       <p>jangan lupa join saluran gw</p><br>
+      <a href="https://whatsapp.com/channel/0029Vb6E9Fc3QxRy0nu79R3x">click link join</a>
       
   </body>
 </html>
